--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+button {
+  font-family: monospace;
+  font-size: 12px;
+  border: 3px solid #545454;
+  padding: 10px;
+  box-shadow: 2px 2px rgba(54,54,54, 0.7);
+  border-radius: 10px;
+  margin: 10px;
+}
