--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,12 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family:'Lato', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+h1, h2, h3, h4, h5 {
+  font-family: 'Fredoka One', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -13,8 +17,9 @@ code {
 }
 
 button {
-  font-family: monospace;
+  font-family:'Lato', sans-serif;
   font-size: 12px;
+  letter-spacing: 1px;
   border: 3px solid #545454;
   padding: 10px;
   box-shadow: 2px 2px rgba(54,54,54, 0.7);
