--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,26 @@
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-content: center;
+  text-align: center;
+  background-color: #fff;
+  max-width: 33%;
+  height: auto;
+  margin: 45vh auto;
+  border-radius: 10px;
+  box-shadow: 5px 7px #4DAFC8;
+  padding: 20px;
 }
-
-.App-link {
-  color: #61dafb;
+span.ReactSpan {
+  background: -webkit-linear-gradient(45deg, rgba(176,237,253,1) 0%, rgba(97,219,251,1) 49%, rgba(0,212,255,1) 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  transition: ease 0.3s;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+span.ReactSpan:hover {
+  background: -webkit-linear-gradient(125deg, rgba(176,237,253,1) 0%, rgba(97,219,251,1) 49%, rgba(0,212,255,1) 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  transition: ease 0.3s;
 }
