--- a/src/components/PopopModal/PopopModal.css
+++ b/src/components/PopopModal/PopopModal.css
@@ -8,22 +8,31 @@
   z-index: 88;
 }
 .modal-main {
-    position:fixed;
-    background: #fff;
-    border-radius: 15px;
-    border: 5px solid #333;
-    width: 80%;
-    height: auto;
-    top:50%;
-    left:50%;
-    transform: translate(-50%,-50%);
-    padding: 20px;
-    box-shadow: 5px 7px rgba(54,54,54, 0.7);
-  }
+  text-align: left;
+  position:fixed;
+  background: #fff;
+  border-radius: 15px;
+  border: 5px solid #333;
+  width: 50%;
+  height: auto;
+  top:50%;
+  left:50%;
+  transform: translate(-50%,-50%);
+  padding: 20px;
+  box-shadow: 5px 7px rgba(54,54,54, 0.7);
+}
 
-  .display-block {
-    display: block;
-  }
-  .display-none {
-    display: none;
-  }
+.modal-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+}
+
+.display-block {
+  display: block;
+}
+.display-none {
+  display: none;
+}
+
