--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,31 @@
+* {
+  box-sizing: border-box;
+}
 body {
   margin: 0;
-  font-family:'Lato', sans-serif;
+  font-family:'Raleway', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #61dbfb;
+  overflow-y: hidden;
+
+}
+a:link, a:visited {
+  color:#61dbfb;
+  text-decoration: none;
+  font-weight: 700; 
+  transition: ease-in-out 0.3s;
+}
+a:hover{
+  color: #333;
+  transition: ease-in-out 0.3s;
+}
+a.container-link:link, a.container-link:visited {
+  color: #333;
+  font-weight: 900; 
+}
+a.container-link:hover {
+  color: #61dbfb;
 }
 
 h1, h2, h3, h4, h5 {
@@ -11,18 +34,32 @@ h1, h2, h3, h4, h5 {
   -moz-osx-font-smoothing: grayscale;
 }
 
+pre {
+  padding: 10px;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
 
 button {
-  font-family:'Lato', sans-serif;
+  font-family:'Raleway', sans-serif;
   font-size: 12px;
+  font-weight: 900;
   letter-spacing: 1px;
-  border: 3px solid #545454;
+  border: 3px solid #333;
   padding: 10px;
-  box-shadow: 2px 2px rgba(54,54,54, 0.7);
+  box-shadow: 2px 2px #4DAFC8;
   border-radius: 10px;
-  margin: 10px;
+  margin: 5px;
+  transition: ease-in-out 0.3s;
 }
+
+button:hover {
+  color: #61dbfb;
+  border: 3px solid #61dbfb;
+  cursor: pointer;
+  transition: ease-in-out 0.3s;
+}
+
